Fix button spacing

--- a/index.css
+++ b/index.css
@@ -104,7 +104,7 @@ p {
     border-radius: 0.5rem;
     border-color: black;
     padding: 0.3rem;
-    padding-top: 0.1rem;
+    /* padding-top: 0.1rem; */
     font-size: 1.5rem;
     text-align: center;
     background-color: #eee;
